--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,23 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<springfox.version>2.9.2</springfox.version>
 	</properties>
 
+
+
 	<dependencies>
+	<!-- spring fox -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -60,6 +74,7 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
