add Repro and Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.datasource.username=my_stuff
 spring.datasource.password=my_stuff
 
 # Table generation: none (default), create, create-drop, validate, update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+
+
